auth/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: default
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/path:   /
      prometheus.io/port:   '8080'
spec:
  selector:
    app: auth
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
